Fix for scroll bars not showing in Mozilla browser

--- a/src/components/tab/tab.scss
+++ b/src/components/tab/tab.scss
@@ -86,11 +86,13 @@ gx-tab {
       --elevation: var(--tab-strip-elevation);
       height: var(--tab-strip-height);
       overflow-x: hidden;
+      overflow-y: auto; // Fix for Mozilla, because it only accepts: visible, hidden, auto or scroll
       overflow-y: overlay;
       white-space: nowrap;
       transition: box-shadow $transition-delay;
 
       &:hover {
+        overflow-x: auto; // Fix for Mozilla, because it only accepts: visible, hidden, auto or scroll
         overflow-x: overlay;
       }
 
